--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/api/edgestore/[...edgestore]/route.js", "src/lib/edgestore.js"  ],
   "exclude": [
     "node_modules"
   ]
