--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@edgestore/react": "^0.1.4",
     "@edgestore/server": "^0.1.4",
     "bcryptjs": "^2.4.3",
+    "lucide-react": "^0.301.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
