--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-flying-item": "^1.1.3",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
